--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ blogger_url: # your blogger URL
 keybase_username: # your keybase user name
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Contact me via my email.
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
 
@@ -59,8 +59,8 @@ google_analytics: UA-XXXXXXXXX # out your google-analytics code
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio  # your blog must have a name for it to show up in the nav bar
-blog_description: a simple whitespace theme for academics
+blog_name: Blog  # your blog must have a name for it to show up in the nav bar
+blog_description: More like some random rants
 permalink: /blog/:year/:title/
 
 # Pagination
@@ -68,7 +68,7 @@ pagination:
   enabled: true
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+disqus_shortname: Lucas # put your disqus shortname
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -106,7 +106,7 @@ kramdown:
 
 # Includes & excludes
 include: ['_pages']
-exclude: ['_pages/teaching', '_pages/projects']
+exclude: ['_pages/teaching', '_pages/projects','_pages/publications']
 
 # Plug-ins
 plugins:
