--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 
 url: # the base hostname & protocol for your site
-baseurl:  # the subpath of your site, e.g. /blog/
+baseurl: / # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 
 # -----------------------------------------------------------------------------
@@ -104,7 +104,7 @@ kramdown:
       start_line: 1
 
 # Includes & excludes
-include: ['_pages','_posts']
+include: ['_pages']
 exclude: ['_pages/teaching', '_pages/projects','_pages/publications']
 
 # Plug-ins
