--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ kramdown:
       start_line: 1
 
 # Includes & excludes
-include: ['_pages', '_posts']
+include: ['_pages']
 exclude:
   - bin
   - Gemfile
