--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: ruizhu2021fall@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+##Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 
 icon:  # the emoji used as the favicon
 url:  # the base hostname & protocol for your site
@@ -26,7 +26,7 @@ navbar_fixed: true
 footer_fixed: false
 
 # Dimensions
-max_width: 800px
+max_width: 900px
 
 # TODO: add layout settings (single page vs. multi-page)
 
